--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="BlazinBuffaloes"
+      content="BlazinBuffaloes NFT Collection"
     />
     <link rel="stylesheet" type="text/css" href="main.css"/>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -28,7 +28,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Blazin Buffaloes</title>
+    <title>BlazinBuffaloes NFT Collection</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
